--- a/gameboard.html
+++ b/gameboard.html
@@ -2,8 +2,12 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles/gameboard.css" type="text/css" />
-       <script type="text/javascript" src="js/gameboard.js"></script>
+       <script src="https://connect.soundcloud.com/sdk/sdk-3.1.1.js"></script>
+       <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
+        <script type="text/javascript" src="js/gameboard.js"></script>
         <title>game</title>
     </head>
-<body></body>
+<body>
+    <iframe id="song" width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/788205&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+</body>
 </html>
