--- a/gameboard.html
+++ b/gameboard.html
@@ -5,9 +5,25 @@
        <script src="https://connect.soundcloud.com/sdk/sdk-3.1.1.js"></script>
        <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
         <script type="text/javascript" src="js/gameboard.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel='stylesheet 'type='text/css'>
         <title>game</title>
     </head>
 <body>
+    <div id="colors">
+      <p>Change your button color</p>
+
+    <div id="green"></div>
+    <div id="red"></div> 
+    <div id="blue"></div>
+    <div id="yellow"></div>
+  
+  </div>
+  <canvas id="gameboard"></canvas>
+  <button id="share">Share:</button>
+  <div id="media">
+    <button id="facebook">Facebook</button>
+    <button id="twitter">Twitter</button>
+  </div>
     <iframe id="song" width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/788205&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
 </body>
 </html>
