--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
         <link rel="stylesheet" href="styles/home.css" type="text/css" />
    <script type="text/javascript" src="js/home.js"></script>
     </head>
-<body></body>
+<body>
+    boom
+    
+</body>
 </html>
