--- a/gameboard.html
+++ b/gameboard.html
@@ -18,7 +18,7 @@
     <div id="yellow"></div>
   
   </div>
-  <canvas id="gameboard"></canvas>
+  <canvas id="gameboard" width="640" height = "480"></canvas>
   <button id="share">Share:</button>
   <div id="media">
     <button id="facebook">Facebook</button>
