--- a/gameboard.html
+++ b/gameboard.html
@@ -5,6 +5,7 @@
        <script src="https://connect.soundcloud.com/sdk/sdk-3.1.1.js"></script>
        <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
         <script type="text/javascript" src="js/gameboard.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel='stylesheet' type='text/css'>
         <title>game</title>
     </head>
@@ -25,8 +26,8 @@
   <canvas id="gameboard" width="640" height = "480"></canvas>
   <button id="share">Share:</button>
   <div id="media">
-    <button id="facebook">Facebook</button>
-    <button id="twitter">Twitter</button>
+   <a href="#" class="fa fa-facebook"></a>
+<a href="#" class="fa fa-twitter"></a>
   </div>
     <iframe id="song" width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/788205&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
 </body>
